--- a/memorandum/td-ticker-clock-b.css
+++ b/memorandum/td-ticker-clock-b.css
@@ -4,11 +4,13 @@
   bottom: 1.8vh;
   border: none;
   overflow: hidden;
+  z-index: 5;
 }
 .ticker{
   left: 1.8vw;
   height: 5.5vw;
   width: 97.2vw;
+  z-index: 6;
 }
 .tickerOnepoint{
   padding: 0.1vw;
@@ -38,4 +40,5 @@
   color: #FFF;
   -webkit-text-stroke: .5vw #235;
   text-stroke: .5vw #235;
+  z-index: 5;
 }
