--- a/always/always-setting.css
+++ b/always/always-setting.css
@@ -77,6 +77,7 @@ input[type="button"]{
   font-weight: 500;
   font-size:1em;
   border-radius: 0.3em;
+  overflow: hidden;
 }
 #settingSecText{
   margin-top:0.5em;
@@ -84,6 +85,7 @@ input[type="button"]{
   min-height:6.0em;    max-height:80vh;
   margin:0.5em 0.5em 0 0.5em ;
   overflow-y:scroll;
+  padding-right: 1.5em;
 }
 #settingSec{
   z-index:9;
