update: ルート保存機能

--- a/memorandum/route/route.css
+++ b/memorandum/route/route.css
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap');
+html body {
+  margin: 0;
+  padding: 0;
+}
+
 #main {
   border: solid 1px #000000;
   position: static;
@@ -7,8 +12,17 @@
   display: block;
   margin: auto;
   font-family: 'Kosugi Maru', sans-serif;
+  padding: 1%;
 }
 
 .route {
   position: relative;
+}
+
+footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  background-color: lightgray;
 }
