--- a/memorandum/route/route.css
+++ b/memorandum/route/route.css
@@ -9,10 +9,10 @@ html body {
   position: static;
   width: 960px;
   height: 720px;
+  min-height: calc(100vh - 5rem);
   display: block;
   margin: auto;
   font-family: 'Kosugi Maru', sans-serif;
-  padding: 1%;
 }
 
 .route {
@@ -20,9 +20,10 @@ html body {
 }
 
 footer {
-  position: fixed;
+  position: sticky;
   bottom: 0;
   width: 100%;
+  height: 5rem;
   text-align: center;
   background-color: lightgray;
   font-family: 'Kosugi Maru', sans-serif;
@@ -31,4 +32,10 @@ footer {
 .mem {
   font-size: 1.5em;
   font-family: 'Kosugi Maru', sans-serif;
+}
+
+.mem > input{
+  padding: 0.1em;
+  margin: 0.1em;
+  border-radius: 0.1em;
 }
