--- a/memorandum/route/route.css
+++ b/memorandum/route/route.css
@@ -5,7 +5,7 @@ html body {
 }
 
 #main {
-  border: solid 1px #000000;
+  border: solid 0px #000000;
   position: static;
   width: 960px;
   height: 720px;
@@ -24,6 +24,7 @@ footer {
   bottom: 0;
   width: 100%;
   height: 5rem;
+  max-height: 5rem;
   text-align: center;
   background-color: lightgray;
   font-family: 'Kosugi Maru', sans-serif;
