--- a/memorandum/route/route.css
+++ b/memorandum/route/route.css
@@ -22,6 +22,8 @@ html body {
 footer {
   position: fixed;
   bottom: 0;
+  left: 0;
+  right: 0;
   width: 100%;
   height: 5rem;
   max-height: 5rem;
