--- a/memorandum/route/route.css
+++ b/memorandum/route/route.css
@@ -4,12 +4,23 @@ html body {
   padding: 0;
 }
 
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
 #main {
   border: solid 0px #000000;
-  position: static;
-  width: 960px;
-  height: 720px;
-  min-height: calc(100vh - 5rem);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  overflow: auto;
+  bottom: 4rem;
   display: block;
   margin: auto;
   font-family: 'Kosugi Maru', sans-serif;
@@ -17,6 +28,15 @@ html body {
 
 .route {
   position: relative;
+  width: auto;
+  height: auto;
+  margin-bottom: 4rem;
+  display: block;
+  margin: auto;
+}
+
+#kansai {
+  width: 960px;
 }
 
 footer {
@@ -25,15 +45,16 @@ footer {
   left: 0;
   right: 0;
   width: 100%;
-  height: 5rem;
-  max-height: 5rem;
+  height: 4rem;
+  max-height: 4rem;
   text-align: center;
   background-color: lightgray;
   font-family: 'Kosugi Maru', sans-serif;
 }
 
 .mem {
-  font-size: 1.5em;
+  font-size: 1.25em;
+  overflow: auto;
   font-family: 'Kosugi Maru', sans-serif;
 }
 
